# N-Tier

./: .gitignore  404.html  Dockerfile.client  Dockerfile.server  README.md  argocd-application.yaml  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs_ci.yaml  main.yaml
app/: config.py  main.py
app/models/: __init__.py  project.py  task.py  user.py
app/routers/: projects.py  tasks.py  users.py
app/schemas/: __init__.py  project.py  task.py  user.py
archive/kubernetes/: postgres.yaml
archive/kubernetes-v1/: api.yaml  client.yaml  pgadmin.yaml
archive/kubernetes-v2/: api-configmap.yaml  api-service.yaml  client-configmap.yaml  client-deployment.yaml  client-service.yaml  pgadmin-configmap.yaml  pgadmin-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml
archive/kubernetes2/: api-deployment.yaml  namespace.yaml  pgadmin-service.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-secret.yaml
client/: __init__.py  api_client.py  config.py
client/components/: __init__.py  projects.py  tasks.py  users.py
client/utils/: __init__.py  helpers.py
docs/: index.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
helm/: Chart.yaml  values.yaml
helm/templates/: api-deployment.yaml  api-service.yaml  client-deployment.yaml  client-service.yaml  pgladmin-deployment.yaml  pgladmin-service.yaml  postgres-deployment.yaml  postgres-service.yaml
kubernetes/: api-deployment.yaml  client-deployment.yaml  pgadmin-deployment.yaml  postgres-deployment.yaml  postgres-service.yaml
overrides/: main.html
search/: search_index.json
stylesheets/: extra copy.css
